Definindo página inicial para login

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,7 +28,7 @@
       Entrar
     </button>
     <button id="login-button2" ion-button color="calm" block on-click="goToCadastro()">
-      Não possui conta? Cadastre-se!
+      Cadastre-se!
     </button>
   </form>
 </ion-content>
