Alterando funções dos botões de cadastro

--- a/src/pages/cadastro-participante/cadastro-participante.html
+++ b/src/pages/cadastro-participante/cadastro-participante.html
@@ -56,7 +56,7 @@
         <ion-radio>
         </ion-radio>
       </ion-item>
-    <button id="cadastroParticipante-button7" ion-button color="positive" block on-click="goToHome()">
+    <button id="cadastroParticipante-button7" ion-button color="positive" block on-click="cadastraParticipante()">
       Cadastrar
     </button>
     <button id="cadastroParticipante-button8" ion-button color="calm" block on-click="goToLogin()">
