Alterando função de cadastro do Organizador

--- a/src/pages/cadastro-organizador/cadastro-organizador.html
+++ b/src/pages/cadastro-organizador/cadastro-organizador.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page10">
-  <form id="cadastroOrganizador-form3">
+  <form #formOrganizador="ngForm" (ngSubmit)="onSubmit(formOrganizador)">
     <div class="spacer" style="width:300px;height:20px;" id="cadastroOrganizador-spacer14"></div>
     <img src="assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
     <div class="spacer" style="width:300px;height:20px;" id="cadastroOrganizador-spacer15"></div>
@@ -15,49 +15,49 @@
         <ion-label>
           Nome Fantasia
         </ion-label>
-        <ion-input type="text" placeholder="" name="nomefantasia"></ion-input>
+        <ion-input type="text" placeholder="" name="nomeFantasia" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input13">
         <ion-label>
           Razão Social
         </ion-label>
-        <ion-input type="text" placeholder="" name="razaosocial"></ion-input>
+        <ion-input type="text" placeholder="" name="razaosocial" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input9">
         <ion-label>
           CNPJ
         </ion-label>
-        <ion-input type="number" placeholder="" name="cpf"></ion-input>
+        <ion-input type="number" placeholder="" name="cnpj" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input14">
         <ion-label>
           Nome (Responsável)
         </ion-label>
-        <ion-input type="text" placeholder="" name="nome"></ion-input>
+        <ion-input type="text" placeholder="" name="nome" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input10">
         <ion-label>
           Telefone
         </ion-label>
-        <ion-input type="tel" placeholder="(__)____-_____" name="telefone"></ion-input>
+        <ion-input type="tel" placeholder="(__)____-_____" name="telefone" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input15">
         <ion-label>
           Endereço
         </ion-label>
-        <ion-input type="text" placeholder="" name="endereco"></ion-input>
+        <ion-input type="text" placeholder="" name="endereco" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input11">
         <ion-label>
           Email
         </ion-label>
-        <ion-input type="email" placeholder="" name="email"></ion-input>
+        <ion-input type="email" placeholder="" name="email" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input12">
         <ion-label>
           Senha
         </ion-label>
-        <ion-input type="text" placeholder="" name="senha"></ion-input>
+        <ion-input type="text" placeholder="" name="senha" ngModel></ion-input>
       </ion-item>
     </ion-list>
     <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador()">
