--- a/src/pages/cadastro-participante/cadastro-participante.html
+++ b/src/pages/cadastro-participante/cadastro-participante.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page9">
-  <form id="cadastroParticipante-form2">
+  <form #f="ngForm" (ngSubmit)="cadastraParticipante(f)">
     <div class="spacer" style="width:300px;height:20px;" id="cadastroParticipante-spacer12"></div>
     <img src="assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
     <div class="spacer" style="width:300px;height:20px;" id="cadastroParticipante-spacer13"></div>
@@ -15,48 +15,48 @@
         <ion-label>
           Nome
         </ion-label>
-        <ion-input type="text" placeholder="" name="nome"></ion-input>
+        <ion-input type="text" placeholder="" name="nome" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroParticipante-input3">
         <ion-label>
           CPF
         </ion-label>
-        <ion-input type="number" name="cpf"></ion-input>
+        <ion-input type="number" name="cpf" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroParticipante-input6">
         <ion-label>
           Telefone
         </ion-label>
-        <ion-input type="tel" name="telefone" mask="(99)9999-99999"></ion-input>
+        <ion-input type="tel" name="telefone" mask="(99)9999-99999" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroParticipante-input7">
         <ion-label>
           Email
         </ion-label>
-        <ion-input type="email" placeholder="" name="email"></ion-input>
+        <ion-input type="email" placeholder="" name="email" ngModel></ion-input>
       </ion-item>
       <ion-item id="cadastroParticipante-input5">
         <ion-label>
           Senha
         </ion-label>
-        <ion-input type="text" placeholder="" name="senha"></ion-input>
+        <ion-input type="text" placeholder="" name="senha" ngModel></ion-input>
       </ion-item>
     </ion-list>
-    <ion-item id="cadastroParticipante-radio1">
+    <ion-item id="cadastroParticipante-radio1" ngModel>
       <ion-label>
         Cliente
       </ion-label>
       <ion-radio>
       </ion-radio>
     </ion-item>
-    <ion-item id="cadastroParticipante-radio2">
+    <ion-item id="cadastroParticipante-radio2" ngModel>
         <ion-label>
           Lojista
         </ion-label>
         <ion-radio>
         </ion-radio>
       </ion-item>
-    <button id="cadastroParticipante-button7" ion-button color="positive" block on-click="cadastraParticipante()">
+    <button id="cadastroParticipante-button7" ion-button color="positive">
       Cadastrar
     </button>
     <button id="cadastroParticipante-button8" ion-button color="calm" block on-click="goToLogin()">
