--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,7 +24,7 @@
       <ion-input type="password" placeholder="" id="password"></ion-input>
     </ion-item>
     <div class="spacer" style="height:40px;" id="login-spacer6"></div>
-    <button id="login-button1" ion-button color="positive" block on-click="sendPostRequest()">
+    <button id="login-button1" ion-button color="positive" block on-click="login()">
       Entrar
     </button>
     <button id="login-button2" ion-button color="calm" block on-click="goToCadastro()">
