Criando a Home do Organizador

--- a/src/pages/cadastro-organizador/cadastro-organizador.html
+++ b/src/pages/cadastro-organizador/cadastro-organizador.html
@@ -60,7 +60,7 @@
         <ion-input type="text" placeholder="" name="senha" ngModel></ion-input>
       </ion-item>
     </ion-list>
-    <button id="cadastroOrganizador-button9" ion-button color="positive" block>
+    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="goToHomeOrganizador()">
       Cadastrar
     </button>
     <button id="cadastroOrganizador-button10" ion-button color="calm" block on-click="goToLogin()">
