--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,24 +7,24 @@
 </ion-header>
 <ion-content padding style="background:url(assets/img/Y0iz54oxR6mbkKDrdJDf_fundo.jpg) no-repeat center;background-size:cover;" id="page6">
   <div class="spacer" style="width:300px;height:70px;" id="login-spacer7"></div>
-  <form id="login-form1">
+  <form #f="ngForm" (ngSubmit)="login(f)">
     <img src="assets/img/KnyvqhtPRo2GFzWvP7tD_SafeChain1.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
     <div class="spacer" style="width:300px;height:56px;" id="login-spacer4"></div>
     <ion-item id="login-input1">
       <ion-label>
         Email
       </ion-label>
-      <ion-input type="email" placeholder="" id="login"></ion-input>
+      <ion-input [(ngModel)]="user.email" type="email" placeholder="" name="email"></ion-input>
     </ion-item>
     <div class="spacer" style="width:300px;height:12px;" id="login-spacer5"></div>
     <ion-item id="login-input2">
       <ion-label>
         Senha
       </ion-label>
-      <ion-input type="password" placeholder="" id="password"></ion-input>
+      <ion-input [(ngModel)]="user.password" type="password" placeholder="" name="password"></ion-input>
     </ion-item>
     <div class="spacer" style="height:40px;" id="login-spacer6"></div>
-    <button id="login-button1" ion-button color="positive" block on-click="login()">
+    <button id="login-button1" ion-button color="positive" block>
       Entrar
     </button>
     <button id="login-button2" ion-button color="calm" block on-click="goToCadastro()">
