Adicionando comentários ao código

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -1,4 +1,7 @@
-<ion-header>
+<!-- Página que identifica se o cadastor será de participante (lojista/cliente)
+  ou de organizador de eventos-->
+
+  <ion-header>
   <ion-navbar>
     <ion-title>
       Cadastro
