--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -1,3 +1,5 @@
+<!-- Tela destinada ao usuário que já está em um evento, tendo feito Check-in anteriormente-->
+
 <ion-header>
   <ion-navbar>
     <ion-title>
