--- a/src/pages/home-organizador/home-organizador.html
+++ b/src/pages/home-organizador/home-organizador.html
@@ -1,3 +1,6 @@
+<!-- Esta página não está completamente definida, seria uma home diferente dos participantes,
+com quesitos administrativos para o organizador-->
+
 <ion-header>
   <ion-navbar>
     <ion-title>
