--- a/src/pages/pr-ximos-eventos/pr-ximos-eventos.html
+++ b/src/pages/pr-ximos-eventos/pr-ximos-eventos.html
@@ -1,3 +1,5 @@
+<!-- Tela destinada ao usuário que não está em um evento, possibilitando um Check-in-->
+
 <ion-header>
   <ion-navbar>
     <ion-title>
