Alterando exibição dos estandes

--- a/src/pages/compras/compras.html
+++ b/src/pages/compras/compras.html
@@ -10,8 +10,52 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        Nome do Estande
-        </ion-card-title>
+        <button ion-button clear>Nome do Estande</button>
+      </ion-card-title>
+      <p>
+        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <img src="">
+    <ion-card-content>
+      <ion-card-title>
+        <button ion-button clear>Nome do Estande</button>
+      </ion-card-title>
+      <p>
+        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <img src="">
+    <ion-card-content>
+      <ion-card-title>
+        <button ion-button clear>Nome do Estande</button>
+      </ion-card-title>
+      <p>
+        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <img src="">
+    <ion-card-content>
+      <ion-card-title>
+        <button ion-button clear>Nome do Estande</button>
+      </ion-card-title>
+      <p>
+        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <img src="">
+    <ion-card-content>
+      <ion-card-title>
+        <button ion-button clear>Nome do Estande</button>
+      </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
       </p>
