--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -1,6 +1,6 @@
 <ion-tabs id="tabsController-tabs1">
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="contact" id="tabsController-tab1"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Comprar" tabIcon="cash" id="tabsController-tab2"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Compras" tabIcon="cash" id="tabsController-tab2"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Eventos" tabIcon="calendar" id="tabsController-tab3"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Opções" tabIcon="cog" id="tabsController-tab4"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Login" tabIcon="cog" id="tabsController-tab5"></ion-tab>
