Criação da página Estandes

--- a/src/pages/compras/compras.html
+++ b/src/pages/compras/compras.html
@@ -10,7 +10,7 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        <button ion-button clear>Nome do Estande</button>
+        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
       </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
@@ -21,7 +21,7 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        <button ion-button clear>Nome do Estande</button>
+        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
       </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
@@ -32,7 +32,7 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        <button ion-button clear>Nome do Estande</button>
+        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
       </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
@@ -43,7 +43,7 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        <button ion-button clear>Nome do Estande</button>
+        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
       </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
@@ -54,7 +54,7 @@
     <img src="">
     <ion-card-content>
       <ion-card-title>
-        <button ion-button clear>Nome do Estande</button>
+        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
       </ion-card-title>
       <p>
         Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
