Atualização dos componentes das páginas Compras e Estande

--- a/src/pages/estande/estande.html
+++ b/src/pages/estande/estande.html
@@ -7,12 +7,73 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>EstandePage</ion-title>
+    <ion-title>Lista de Produtos</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="">
+      </ion-thumbnail>
+      <h2>Produto</h2>
+      <p>Descrição • Preço</p>
+      <button ion-button clear item-end>Adicionar</button>
+    </ion-item>
+  </ion-list>
+  <button ion-button icon-start>
+    <ion-icon name="cart"></ion-icon>
+    Finalizar Compra
+  </button>
 </ion-content>
