--- a/src/pages/compras/compras.html
+++ b/src/pages/compras/compras.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Compras
+      Estandes Participantes
     </ion-title>
   </ion-navbar>
 </ion-header>
