Realizando conexão com o AngularFirebaseAuth

--- a/src/pages/cadastro-organizador/cadastro-organizador.html
+++ b/src/pages/cadastro-organizador/cadastro-organizador.html
@@ -51,16 +51,16 @@
         <ion-label>
           Email
         </ion-label>
-        <ion-input type="email" placeholder="" name="email" ngModel></ion-input>
+        <ion-input [(ngModel)]="user.mail" type="email" placeholder="" name="email"></ion-input>
       </ion-item>
       <ion-item id="cadastroOrganizador-input12">
         <ion-label>
           Senha
         </ion-label>
-        <ion-input type="text" placeholder="" name="senha" ngModel></ion-input>
+        <ion-input [(ngModel)]="user.password" type="text" placeholder="" name="senha"></ion-input>
       </ion-item>
     </ion-list>
-    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="goToHomeOrganizador()">
+    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador(user)">
       Cadastrar
     </button>
     <button id="cadastroOrganizador-button10" ion-button color="calm" block on-click="goToLogin()">
