--- a/src/pages/cadastro-email-senha/cadastro-email-senha.html
+++ b/src/pages/cadastro-email-senha/cadastro-email-senha.html
@@ -1,18 +1,34 @@
-<!--
-  Generated template for the CadastroEmailSenhaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>cadastro-email-senha</ion-title>
+    <ion-title>
+      Cadastro do Usuário
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content padding id="page10">
+  <form>
+    <div class="spacer" style="width:300px;height:20px;" id="cadastroOrganizador-spacer14"></div>
+    <img src="assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
+    <div class="spacer" style="width:300px;height:20px;" id="cadastroOrganizador-spacer15"></div>
+    <ion-list id="cadastroOrganizador-list3">
+      <ion-item id="cadastroOrganizador-input11">
+        <ion-label>
+          Email
+        </ion-label>
+        <ion-input [(ngModel)]="user.email" type="email" placeholder="" name="email"></ion-input>
+      </ion-item>
+      <ion-item id="cadastroOrganizador-input12">
+        <ion-label>
+          Senha
+        </ion-label>
+        <ion-input [(ngModel)]="user.password" type="password" placeholder="" name="senha"></ion-input>
+      </ion-item>
+    </ion-list>
+    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador(user)">
+      Cadastrar
+    </button>
+    <button id="cadastro-email-senha-button10" ion-button color="calm" block on-click="goToLogin()">
+      Voltar
+    </button>
+  </form>
 </ion-content>
