Configurando conexão com Banco e finalizando cadastro de Organizador

--- a/src/pages/cadastro-email-senha/cadastro-email-senha.html
+++ b/src/pages/cadastro-email-senha/cadastro-email-senha.html
@@ -24,7 +24,7 @@
         <ion-input [(ngModel)]="user.password" type="password" placeholder="" name="senha"></ion-input>
       </ion-item>
     </ion-list>
-    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador(user)">
+    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastrarUsuario(user)">
       Cadastrar
     </button>
     <button id="cadastro-email-senha-button10" ion-button color="calm" block on-click="goToLogin()">
