--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -30,7 +30,7 @@
       Entrar
     </button>
   </form>
-    <button id="login-button2" (click)="goToCadastro()" ion-button color="calm" block>
+    <button id="login-button2" (click)="goToCadastroEmailSenha()" ion-button color="calm" block>
       Cadastre-se!
     </button>
   
