--- a/src/pages/cadastro-participante/cadastro-participante.html
+++ b/src/pages/cadastro-participante/cadastro-participante.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page9">
-  <form #f="ngForm" (ngSubmit)="cadastraParticipante(f)">
+  <form>
     <div class="spacer" style="width:300px;height:20px;" id="cadastroParticipante-spacer12"></div>
       <img src="assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
       <div class="spacer" style="width:300px;height:20px;" id="cadastroParticipante-spacer13"></div>
@@ -29,18 +29,18 @@
           </ion-label>
           <ion-input [(ngModel)]="participante.telefone" type="tel" name="telefone" mask="(99)9999-99999" ngModel></ion-input>
         </ion-item>
-        <ion-list radio-group>
+        <ion-list radio-group [(ngModel)]="participante.tipo" ngDefaultControl name="tipo">
           <ion-item>
             <ion-label>Cliente</ion-label>
-            <ion-radio [(ngModel)]="participante.tipo" checked="true" value="cliente"></ion-radio>
+            <ion-radio  checked="true" value="cliente" name="cliente" ></ion-radio>
           </ion-item>
           <ion-item>
             <ion-label>Lojista</ion-label>
-            <ion-radio [(ngModel)]="participante.tipo" value="lojista"></ion-radio>
+            <ion-radio value="lojista" name="lojista"></ion-radio>
           </ion-item>
         </ion-list>
       </ion-list>
-      <button id="cadastroParticipante-button7" ion-button color="positive">
+      <button id="cadastroParticipante-button7" ion-button color="positive" on-click="cadastraParticipante()">
         Cadastrar
       </button>
       <button id="cadastroParticipante-button8" ion-button color="calm" block on-click="goToLogin()">
