--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,7 +26,7 @@
       <ion-input type="password" [(ngModel)]="user.password" name="password"></ion-input>
     </ion-item>
     <div class="spacer" style="height:40px;" id="login-spacer6"></div>
-    <button id="login-button1" (click)="login()" ion-button color="positive" block>
+    <button id="login-button1" (click)="login(user)" ion-button color="positive" block>
       Entrar
     </button>
   </form>
