Criação das paginas de Produto e Home Lojista

--- a/src/pages/op-es-tab-default-page/op-es-tab-default-page.html
+++ b/src/pages/op-es-tab-default-page/op-es-tab-default-page.html
@@ -5,4 +5,9 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page5"></ion-content>
+<ion-content padding id="page5">
+  <h2> Opções de Conta </h2>
+  <button id="opcoes-button1" ion-button color="positive" block on-click="goToEditaPerfil()">
+    EDITAR INFORMAÇÕES
+  </button>
+</ion-content>
