--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,9 @@
 <ion-content padding id="page2">
   <ion-card id="home-card21">
     <ion-list>
+        <button ion-button color="positive" block on-click="goToProdutos()">
+            Cadastrar Produto
+          </button>
       <ion-item color="none" id="home-list-item3">
         Saldo
         <ion-note class="card-home" item-right><h3>R$934,00</h3></ion-note>
