--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -1,21 +1,14 @@
-<!--
-  Generated template for the ProdutosPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>produtos</ion-title>
+    <ion-title>Produtos</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
-   <form>
+  
     <ion-list>
       <ion-item>
         <ion-label>
@@ -35,11 +28,10 @@
         </ion-label>
         <ion-input [(ngModel)]="produto.valor" type="number" placeholder="" name="valor" ngModel></ion-input>
       </ion-item>
-    <button ion-button color="positive" block on-click="cadastraProduto(produto)">
+    <button ion-button color="positive" block on-click="save(produto)">
       Cadastrar
     </button>
     <button ion-button color="calm" block on-click="goToHome()">
       Voltar
     </button>
-  </form>
-</ion-content>
+  
