--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -1,3 +1,9 @@
+<!--
+  Generated template for the ProdutosPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
 
   <ion-navbar>
@@ -8,30 +14,5 @@
 
 
 <ion-content padding>
-  
-    <ion-list>
-      <ion-item>
-        <ion-label>
-          Nome do Produto
-        </ion-label>
-        <ion-input [(ngModel)]="produto.nome" type="text" placeholder="" name="nome" ngModel></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Descrição
-        </ion-label>
-        <ion-input [(ngModel)]="produto.descricao" type="text" placeholder="" name="descricao" ngModel></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Valor
-        </ion-label>
-        <ion-input [(ngModel)]="produto.valor" type="number" placeholder="" name="valor" ngModel></ion-input>
-      </ion-item>
-    <button ion-button color="positive" block on-click="save(produto)">
-      Cadastrar
-    </button>
-    <button ion-button color="calm" block on-click="goToHome()">
-      Voltar
-    </button>
-  
+
+</ion-content>
