--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,36 +1,18 @@
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      Home
-    </ion-title>
+    <ion-title>Home</ion-title>
   </ion-navbar>
+
 </ion-header>
-<ion-content padding id="page2">
-  <ion-card id="home-card21">
-    <ion-list>
-        <button ion-button color="positive" block on-click="goToProdutos()">
-            Cadastrar Produto
-          </button>
-      <ion-item color="none" id="home-list-item3">
-        Saldo
-        <ion-note class="card-home" item-right><h3>R$934,00</h3></ion-note>
-        <ion-icon name="cash" item-right></ion-icon>
-      </ion-item>
-    </ion-list>
-  </ion-card>
-  <ion-card id="home-card22">
-    <ion-list>
-      <ion-item color="none" id="home-list-item7">
-        Histórico
-        <ion-icon name="card" item-right></ion-icon>
-      </ion-item>
-      <ion-item color="none" id="home-list-item9">
-        Jack Burger & Beer
-        <br />
-        <h3>Restaurante</h3>
-        <ion-note class="card-home" item-right><h3>R$59,90 <br> 05/10</h3></ion-note>
-      </ion-item>
-     
-    </ion-list>
-  </ion-card>
+
+
+<ion-content padding>
+
 </ion-content>
