--- a/src/pages/operações/operações.html
+++ b/src/pages/operações/operações.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the EventosPage page.
+  Generated template for the OperaçõesPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Eventos</ion-title>
+    <ion-title>Operações</ion-title>
   </ion-navbar>
 
 </ion-header>
