--- a/src/pages/operacoes/operacoes.html
+++ b/src/pages/operacoes/operacoes.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the OpçõesPage page.
+  Generated template for the OperacoesPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Opções</ion-title>
+    <ion-title>Operacoes</ion-title>
   </ion-navbar>
 
 </ion-header>
