--- a/src/pages/tabs-controller-organizador/tabs-controller-organizador.html
+++ b/src/pages/tabs-controller-organizador/tabs-controller-organizador.html
@@ -1,6 +1,6 @@
 <ion-tabs>
     <ion-tab [root]="homeRoot" tabTitle="Home" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="operaçõesRoot" tabTitle="Operações" tabIcon="information-circle"></ion-tab>
+    <ion-tab [root]="operacoesRoot" tabTitle="Operacoes" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="eventosRoot" tabTitle="Eventos" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="opçõesRoot" tabTitle="Opções" tabIcon="information-circle"></ion-tab>
+    <ion-tab [root]="opcoesRoot" tabTitle="Opcoes" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
