--- a/src/pages/cadastro-organizador/cadastro-organizador.html
+++ b/src/pages/cadastro-organizador/cadastro-organizador.html
@@ -48,7 +48,7 @@
         <ion-input [(ngModel)]="organizador.endereco" type="text" placeholder="" name="endereco" ngModel></ion-input>
       </ion-item>
     </ion-list>
-    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador()">
+    <button id="cadastroOrganizador-button9" ion-button color="positive" block on-click="cadastraOrganizador(organizador)">
       Cadastrar
     </button>
     <button id="cadastroOrganizador-button10" ion-button color="calm" block on-click="goToLogin()">
