Dividindo tela de cadastro de "participantes" para "cliente" e "lojista"

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -17,14 +17,12 @@
       Diz pra gente, você é:
     </p>
   </div>
-  <button id="cadastro-button3" ion-button color="positive" block on-click="goToCadastroParticipante()">
-    Participante
+  <button id="cadastro-button3" ion-button color="positive" block on-click="goToCadastroCliente()">
+    Cliente
   </button>
-  <div id="cadastro-markdown4" style="text-align:center;" class="show-list-numbers-and-dots">
-    <p style="color:#FFFFFF;font-size:20px;">
-      ou
-    </p>
-  </div>
+  <button id="cadastro-button3" ion-button color="positive" block on-click="goToCadastroLojista()">
+    Lojista
+  </button>
   <button id="cadastro-button4" ion-button color="positive" block on-click="goToCadastroOrganizador()">
     Organizador
   </button>
