--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,7 +18,7 @@
       <ion-input [(ngModel)]="user.password" type="password" name="password"></ion-input>
     </ion-item>
     <div class="spacer" style="height:40px;" id="login-spacer6"></div>
-    <button id="login-button1" (click)="login(user)" ion-button color="positive" block>
+    <button id="login-button1" (click)="goToHomeLojista()" ion-button color="positive" block>
       Entrar
     </button>
   </form>
