--- a/src/pages/tabs-controller-lojista/tabs-controller-lojista.html
+++ b/src/pages/tabs-controller-lojista/tabs-controller-lojista.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab [root]="homeRoot" tabTitle="Home" tabIcon="information-circle"></ion-tab>
+    <ion-tab [root]="homeLojistaRoot" tabTitle="Home" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="operacoesRoot" tabTitle="Operacoes" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="produtosRoot" tabTitle="Produtos" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="opcoesRoot" tabTitle="Opcoes" tabIcon="information-circle"></ion-tab>
