--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,33 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-
+  <button ion-button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+  </button>
 </ion-header>
-
-
+  
 <ion-content padding>
-
+    <ion-menu [content]="content" type="overlay">
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>Menu</ion-title>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content>
+          <ion-list>
+            <button ion-item (click)="openPage(homePage)">
+              Home
+            </button>
+            <button ion-item (click)="openPage(friendsPage)">
+              Friends
+            </button>
+            <button ion-item (click)="openPage(eventsPage)">
+              Events
+            </button>
+            <button ion-item (click)="closeMenu()">
+              Close Menu
+            </button>
+          </ion-list>
+        </ion-content>
+      </ion-menu>
+      <ion-nav id="nav" #content [root]="HomePage"></ion-nav>
+  
 </ion-content>
