Alterando pagina de opções e conteúdo do menu

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,17 +13,17 @@
         </ion-header>
         <ion-content>
           <ion-list>
-            <button ion-item (click)="openPage(homePage)">
-              Home
+            <button ion-item (click)="goToCompras()">
+              Compras
             </button>
-            <button ion-item (click)="openPage(friendsPage)">
-              Friends
+            <button ion-item (click)="goToEventos()">
+              Eventos
             </button>
-            <button ion-item (click)="openPage(eventsPage)">
-              Events
+            <button ion-item (click)="goToOpEsTabDefaultPage()">
+              Opções
             </button>
             <button ion-item (click)="closeMenu()">
-              Close Menu
+              Fechar
             </button>
           </ion-list>
         </ion-content>
