--- a/src/pages/compras/compras.html
+++ b/src/pages/compras/compras.html
@@ -1,11 +1,12 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Estandes Participantes
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+
+    <ion-navbar>
+      <ion-title>Compras</ion-title>
+    </ion-navbar>
+  
+  </ion-header>
 <ion-content padding id="page3">
+
   <ion-card>
     <img src="">
     <ion-card-content>
@@ -17,48 +18,5 @@
       </p>
     </ion-card-content>
   </ion-card>
-  <ion-card>
-    <img src="">
-    <ion-card-content>
-      <ion-card-title>
-        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
-      </ion-card-title>
-      <p>
-        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
-      </p>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <img src="">
-    <ion-card-content>
-      <ion-card-title>
-        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
-      </ion-card-title>
-      <p>
-        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
-      </p>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <img src="">
-    <ion-card-content>
-      <ion-card-title>
-        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
-      </ion-card-title>
-      <p>
-        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
-      </p>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <img src="">
-    <ion-card-content>
-      <ion-card-title>
-        <button ion-button clear on-click="goToEstande()">Nome do Estande</button>
-      </ion-card-title>
-      <p>
-        Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande Descrição do Estande
-      </p>
-    </ion-card-content>
-  </ion-card>
+  
 </ion-content>
