--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
             <button ion-item (click)="goToEventos()">
               Eventos
             </button>
-            <button ion-item (click)="goToOpEsTabDefaultPage()">
+            <button ion-item (click)="goToOpcoes()">
               Opções
             </button>
             <button ion-item (click)="closeMenu()">
