Alteração dos tipos de menu

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,5 +29,7 @@
         </ion-content>
       </ion-menu>
       <ion-nav id="nav" #content [root]="HomePage"></ion-nav>
+        <img src="../../assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
+        <div class="spacer" style="width:300px;height:56px;" id="cadastro-spacer9"></div>
   
 </ion-content>
