--- a/src/pages/home-lojista/home-lojista.html
+++ b/src/pages/home-lojista/home-lojista.html
@@ -1,20 +1,39 @@
-<!--
-  Generated template for the HomeLojistaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>home-lojista</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-  <button ion-button color="positive" block on-click="goToProdutos()">
-    Cadastrar Produto
-  </button>
-</ion-content>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+  </ion-header>
+    
+  <ion-content padding>
+      <ion-menu [content]="content" type="overlay">
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Menu</ion-title>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content>
+            <ion-list>
+              <button ion-item (click)="goToOperacoes()">
+                Operações
+              </button>
+              <button ion-item (click)="goToProdutos()">
+                Produtos
+              </button>
+              <button ion-item (click)="goToEventos()">
+                Eventos
+              </button>
+              <button ion-item (click)="goToOpcoes()">
+                Opções
+              </button>
+              <button ion-item (click)="closeMenu()">
+                Fechar
+              </button>
+            </ion-list>
+          </ion-content>
+        </ion-menu>
+        <ion-nav id="nav2" #content [root]="HomeLojistaPage"></ion-nav>
+          <img src="../../assets/img/D3QbxaO7Sr23xyJtF9Bp_SafeChain2.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
+          <div class="spacer" style="width:300px;height:56px;" id="cadastro-spacer9"></div>
+    
+  </ion-content>
+  
