Inserção da página de edição do cliente e alteração do método de edição

--- a/src/pages/opcoes/opcoes.html
+++ b/src/pages/opcoes/opcoes.html
@@ -7,14 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Opcoes</ion-title>
+    <ion-title>Opções</ion-title>
   </ion-navbar>
 
 </ion-header>
-
-
+  
 <ion-content padding>
-
-  Alterar Informações
-
+  <button ion-button (click)="editCliente()">Alterar Informações da Conta</button>
+  <button ion-button (click)="editCliente()">Remover Conta</button>
 </ion-content>
