--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProdutosPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -12,7 +6,33 @@
 
 </ion-header>
 
-
 <ion-content padding>
-
+  <form>
+        <ion-list>
+          <ion-item>
+            <ion-label>
+              Nome do Produto
+            </ion-label>
+            <ion-input type="text" placeholder="" name="nome" ngModel></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Valor
+            </ion-label>
+            <ion-input type="number" name="valor" ngModel></ion-input>
+          </ion-item>
+        <ion-item>
+          <ion-label>
+            Descrição
+          </ion-label>
+          <ion-input type="text" name="descricao" ngModel></ion-input>
+        </ion-item>
+      </ion-list>
+      <button ion-button color="positive" on-click="cadastraProduto()">
+        Cadastrar
+      </button>
+      <button ion-button color="calm" block on-click="goToHomeOrganizador()">
+        Voltar
+      </button>
+    </form>
 </ion-content>
